Fix for bug 416751 (rich text editor no longer in designmode when navigating back). Branch port of the fix for bug 403501 which had r/sr=jst, a=dveditz.